@@ -4,3 +4,4 @@ defaults:
       path: "" # an empty string here means all files in the project
     values:
       layout: "master"
+      terminal: "news"
