@@ -1,0 +1,1 @@
+<span style="color:green">blog</span>@<span style="color:yellow">baobob.org</span> $
