@@ -39,10 +39,7 @@
 			</ul>
 		</div>
 		<div class="layout_left terminal">
-			<pre><span style="color:green">blog</span>@<span style="color:yellow">baobob.org</span> $ cat news
-{% include news %}
-
-<span style="color:green">blog</span>@<span style="color:yellow">baobob.org</span> $ </pre>
+			<pre>{% include {{page.terminal}} %}</pre>
 		</div>
 
 		<div class="layout_right">
