@@ -1,6 +1,9 @@
 ---
 title: IPoT post
+terminal: test_term
 ---
 <p>This post comes from IPoT.</p>
 
 <p>I just needed a third post.</p>
+
+<p> This one has got a custom terminal view !</p>
